[project]
name = "halide-llvm"
dynamic = ["version"]
description = "Halide's build of LLVM libraries and tools for development."
readme = "README.md"
authors = [
    { name = "Alex Reinking", email = "areinking@adobe.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "scikit-build-core>=0.11",
    "setuptools-scm>=8",
]

[build-system]
requires = [
    "scikit-build-core>=0.11",
    "setuptools-scm>=8",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.install-dir = "halide-llvm"
wheel.py-api = "py3"

[tool.setuptools_scm]

[tool.scikit-build.cmake.define]
# Enabled/configured settings
LLVM_BUILD_32_BITS = false  # TODO: take from environment? Set in build?
LLVM_ENABLE_ASSERTIONS = true
LLVM_ENABLE_EH = true
LLVM_ENABLE_PROJECTS = ["clang", "lld", "clang-tools-extra"]
LLVM_ENABLE_RUNTIMES = ["compiler-rt", "libcxx", "libcxxabi", "libunwind"]
LLVM_ENABLE_RTTI = true
LLVM_ENABLE_ZLIB = true
LLVM_TARGETS_TO_BUILD = ["X86", "ARM", "NVPTX", "AArch64", "Hexagon", "PowerPC", "WebAssembly", "RISCV"]

# Disabled settings
CLANG_ENABLE_ARCMT = false
CLANG_ENABLE_CLANGD = false
CLANG_ENABLE_STATIC_ANALYZER = false
CLANG_INCLUDE_DOCS = false
CLANG_INSTALL_SCANBUILD = false
CLANG_INSTALL_SCANVIEW = false
CLANG_PLUGIN_SUPPORT = false
CLANG_TIDY_ENABLE_STATIC_ANALYZER = false
CLANG_TOOLS_EXTRA_INCLUDE_DOCS = false
CLANG_TOOL_APINOTES_TEST_BUILD = false
CLANG_TOOL_ARCMT_TEST_BUILD = false
CLANG_TOOL_CLANG_CHECK_BUILD = false
CLANG_TOOL_CLANG_DIFF_BUILD = false
CLANG_TOOL_CLANG_EXTDEF_MAPPING_BUILD = false
CLANG_TOOL_CLANG_FORMAT_BUILD = false
CLANG_TOOL_CLANG_FORMAT_VS_BUILD = false
CLANG_TOOL_CLANG_FUZZER_BUILD = false
CLANG_TOOL_CLANG_IMPORT_TEST_BUILD = false
CLANG_TOOL_CLANG_LINKER_WRAPPER_BUILD = false
CLANG_TOOL_CLANG_OFFLOAD_BUNDLER_BUILD = false
CLANG_TOOL_CLANG_OFFLOAD_PACKAGER_BUILD = false
CLANG_TOOL_CLANG_REFACTOR_BUILD = false
CLANG_TOOL_CLANG_RENAME_BUILD = false
CLANG_TOOL_CLANG_REPL_BUILD = false
CLANG_TOOL_CLANG_SCAN_DEPS_BUILD = false
CLANG_TOOL_CLANG_SHLIB_BUILD = false
CLANG_TOOL_C_ARCMT_TEST_BUILD = false
CLANG_TOOL_C_INDEX_TEST_BUILD = false
CLANG_TOOL_DIAGTOOL_BUILD = false
CLANG_TOOL_DICTIONARY_BUILD = false
CLANG_TOOL_LIBCLANG_BUILD = false
CLANG_TOOL_NVPTX_ARCH_BUILD = false
CLANG_TOOL_SCAN_BUILD_BUILD = false
CLANG_TOOL_SCAN_BUILD_PY_BUILD = false
CLANG_TOOL_SCAN_VIEW_BUILD = false
LLVM_BUILD_UTILS = false
LLVM_ENABLE_BINDINGS = false
LLVM_ENABLE_CURL = false
LLVM_ENABLE_DIA_SDK = false
LLVM_ENABLE_HTTPLIB = false
LLVM_ENABLE_IDE = false
LLVM_ENABLE_LIBXML2 = false
LLVM_ENABLE_OCAMLDOC = false
LLVM_ENABLE_PLUGINS = false
LLVM_ENABLE_TERMINFO = false
LLVM_ENABLE_WARNINGS = false
LLVM_ENABLE_ZSTD = false
LLVM_INCLUDE_BENCHMARKS = false
LLVM_INCLUDE_DOCS = false
LLVM_INCLUDE_EXAMPLES = false
LLVM_INCLUDE_TESTS = false
LLVM_INCLUDE_UTILS = false
LLVM_TOOL_BUGPOINT_BUILD = false
LLVM_TOOL_BUGPOINT_PASSES_BUILD = false
LLVM_TOOL_DSYMUTIL_BUILD = false
LLVM_TOOL_DXIL_DIS_BUILD = false
LLVM_TOOL_GOLD_BUILD = false
LLVM_TOOL_LLC_BUILD = false
LLVM_TOOL_LLI_BUILD = false
LLVM_TOOL_LLVM_AR_BUILD = false
LLVM_TOOL_LLVM_BCANALYZER_BUILD = false
LLVM_TOOL_LLVM_CAT_BUILD = false
LLVM_TOOL_LLVM_CFI_VERIFY_BUILD = false
LLVM_TOOL_LLVM_COV_BUILD = false
LLVM_TOOL_LLVM_CVTRES_BUILD = false
LLVM_TOOL_LLVM_CXXDUMP_BUILD = false
LLVM_TOOL_LLVM_CXXFILT_BUILD = false
LLVM_TOOL_LLVM_CXXMAP_BUILD = false
LLVM_TOOL_LLVM_C_TEST_BUILD = false
LLVM_TOOL_LLVM_DEBUGINFOD_BUILD = false
LLVM_TOOL_LLVM_DEBUGINFOD_FIND_BUILD = false
LLVM_TOOL_LLVM_DEBUGINFO_ANALYZER_BUILD = false
LLVM_TOOL_LLVM_DIFF_BUILD = false
LLVM_TOOL_LLVM_DIS_BUILD = false
LLVM_TOOL_LLVM_DIS_FUZZER_BUILD = false
LLVM_TOOL_LLVM_DLANG_DEMANGLE_FUZZER_BUILD = false
LLVM_TOOL_LLVM_DWARFDUMP_BUILD = false
LLVM_TOOL_LLVM_DWARFUTIL_BUILD = false
LLVM_TOOL_LLVM_DWP_BUILD = false
LLVM_TOOL_LLVM_EXEGESIS_BUILD = false
LLVM_TOOL_LLVM_EXTRACT_BUILD = false
LLVM_TOOL_LLVM_GSYMUTIL_BUILD = false
LLVM_TOOL_LLVM_IFS_BUILD = false
LLVM_TOOL_LLVM_ISEL_FUZZER_BUILD = false
LLVM_TOOL_LLVM_ITANIUM_DEMANGLE_FUZZER_BUILD = false
LLVM_TOOL_LLVM_JITLINK_BUILD = false
LLVM_TOOL_LLVM_JITLISTENER_BUILD = false
LLVM_TOOL_LLVM_LIBTOOL_DARWIN_BUILD = false
LLVM_TOOL_LLVM_LINK_BUILD = false
LLVM_TOOL_LLVM_LIPO_BUILD = false
LLVM_TOOL_LLVM_LTO2_BUILD = false
LLVM_TOOL_LLVM_LTO_BUILD = false
LLVM_TOOL_LLVM_MCA_BUILD = false
LLVM_TOOL_LLVM_MC_ASSEMBLE_FUZZER_BUILD = false
LLVM_TOOL_LLVM_MC_BUILD = false
LLVM_TOOL_LLVM_MC_DISASSEMBLE_FUZZER_BUILD = false
LLVM_TOOL_LLVM_MICROSOFT_DEMANGLE_FUZZER_BUILD = false
LLVM_TOOL_LLVM_ML_BUILD = false
LLVM_TOOL_LLVM_MODEXTRACT_BUILD = false
LLVM_TOOL_LLVM_MT_BUILD = false
LLVM_TOOL_LLVM_NM_BUILD = false
LLVM_TOOL_LLVM_OBJCOPY_BUILD = false
LLVM_TOOL_LLVM_OBJDUMP_BUILD = false
LLVM_TOOL_LLVM_OPT_FUZZER_BUILD = false
LLVM_TOOL_LLVM_OPT_REPORT_BUILD = false
LLVM_TOOL_LLVM_PDBUTIL_BUILD = false
LLVM_TOOL_LLVM_PROFDATA_BUILD = false
LLVM_TOOL_LLVM_PROFGEN_BUILD = false
LLVM_TOOL_LLVM_RC_BUILD = false
LLVM_TOOL_LLVM_READOBJ_BUILD = false
LLVM_TOOL_LLVM_READTAPI_BUILD = false
LLVM_TOOL_LLVM_REDUCE_BUILD = false
LLVM_TOOL_LLVM_REMARKUTIL_BUILD = false
LLVM_TOOL_LLVM_RTDYLD_BUILD = false
LLVM_TOOL_LLVM_RUST_DEMANGLE_FUZZER_BUILD = false
LLVM_TOOL_LLVM_SHLIB_BUILD = false
LLVM_TOOL_LLVM_SIM_BUILD = false
LLVM_TOOL_LLVM_SIZE_BUILD = false
LLVM_TOOL_LLVM_SPECIAL_CASE_LIST_FUZZER_BUILD = false
LLVM_TOOL_LLVM_SPLIT_BUILD = false
LLVM_TOOL_LLVM_STRESS_BUILD = false
LLVM_TOOL_LLVM_STRINGS_BUILD = false
LLVM_TOOL_LLVM_SYMBOLIZER_BUILD = false
LLVM_TOOL_LLVM_TLI_CHECKER_BUILD = false
LLVM_TOOL_LLVM_UNDNAME_BUILD = false
LLVM_TOOL_LLVM_XRAY_BUILD = false
LLVM_TOOL_LLVM_YAML_NUMERIC_PARSER_FUZZER_BUILD = false
LLVM_TOOL_LLVM_YAML_PARSER_FUZZER_BUILD = false
LLVM_TOOL_LTO_BUILD = false
LLVM_TOOL_MLIR_BUILD = false
LLVM_TOOL_OBJ2YAML_BUILD = false
LLVM_TOOL_OPENMP_BUILD = false
LLVM_TOOL_OPT_BUILD = false
LLVM_TOOL_OPT_VIEWER_BUILD = false
LLVM_TOOL_POLLY_BUILD = false
LLVM_TOOL_PSTL_BUILD = false
LLVM_TOOL_REMARKS_SHLIB_BUILD = false
LLVM_TOOL_SANCOV_BUILD = false
LLVM_TOOL_SANSTATS_BUILD = false
LLVM_TOOL_SPIRV_TOOLS_BUILD = false
LLVM_TOOL_VERIFY_USELISTORDER_BUILD = false
LLVM_TOOL_VFABI_DEMANGLE_FUZZER_BUILD = false
LLVM_TOOL_XCODE_TOOLCHAIN_BUILD = false
LLVM_TOOL_YAML2OBJ_BUILD = false
